[project]
name = "imdb-data"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0,<9.0",
    "parsel>=1.0.0,<2.0",
    "requests>=2.0.0,<3.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
test = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.5.0",
    "types-requests>=2.0.0,<3.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
