[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "imdb-data"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2,<9",
    "parsel>=1.7,<2",
    "requests>=2.32,<3",
]
scripts.imdb-data = "imdb_data:main"

license-expression = "MIT"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.5",
    "types-requests>=2.32,<3",
]

[tool.hatch.build.targets.wheel.force-include]
"imdb_data.py" = "imdb_data/__init__.py"

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
